# trading212api-web

./: Cargo.toml  LICENSE  README.md  Trunk.toml  index.html
.github/workflows/: gh_pages.yml  pr_check.yml
runConfigurations/: Run trunk-template.run.xml  Test trunk-template.run.xml
src/: app.rs  main.rs
src/components/: account_refresher.rs  cash_refresher.rs  dividends_refresher.rs  exchange_refresher.rs  instrument_refresher.rs  mod.rs  orders_refresher.rs  pies_refresher.rs  positions_refresher.rs  transactions_refresher.rs  user_context_provider.rs
src/components/table/: body.rs  error.rs  head.rs  macros.rs  mod.rs  types.rs
src/components/tabs/: mod.rs
src/hooks/: use_user_context.rs
src/pages/: header.rs  home.rs  logout.rs  mod.rs  page_not_found.rs
src/pages/dashboard/: cash.rs  dividends.rs  dividends_ticker_table.rs  exchange.rs  exchanges.rs  instruments.rs  mod.rs  orders.rs  pies.rs  pies_table.rs  positions.rs  positions_table.rs  transactions.rs  transactions_table.rs
src/pages/dashboard/dividends/: history_table.rs  mod.rs  plot.rs  ticker_table.rs
src/pages/token/: mod.rs  no_token.rs
src/services/: requests.rs
src/types/: auth.rs  data.rs  dividend.rs  mod.rs  order.rs  pie.rs  theme.rs  transaction.rs
