[package]
name = "trading212-web"
version = "0.2.1"
edition = "2021"
description = "Web interface for the Trading 212 API"
readme = "README.md"
repository = "https://github.com/aknarts/trading212api-web"
license = "MIT"
keywords = ["yew", "trunk", "api", "trading212"]
categories = ["gui", "wasm", "web-programming", "finance"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
console_error_panic_hook = "0.1"
derivative = "2.2"
gloo-storage = "0.3"
http = "1.1"
yew-plotly = "0.3.0"
rust_decimal = "1.36"
rusty-money = "0.4"
serde = { version = "1" }
serde-value = "0.7"
time = { version = "0.3", features = ["wasm-bindgen", "formatting"] }
tracing = "0.1"
tracing-wasm = "0.2"
trading212 = { version = "0.2" }
yew = { version = "0.21.0", features = ["csr"] }
yew-custom-components = { version = "0.2", features = ["table", "tabs", "pagination"] }
yew-hooks = "0.3"
yew-router = "0.18"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["HtmlInputElement", "Document", "Window"] }
lazy_static = "1.4"
uuid = "1.8"
form_urlencoded = "1.2.1"
